--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,16 +2,33 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Startseite</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>Willkommen auf der Startseite!</h1>
-<form action="#" th:action="@{/send}" th:object="${chatForm}" method="post">
-  <textarea th:field="*{prompt}" placeholder="Geben Sie Ihren Text ein"></textarea>
-  <button type="submit">Senden</button>
-</form>
-<div>
-  <h2>Antwort:</h2>
-  <p th:text="${response}"></p>
+<div class="container">
+  <h1 class="center-align">Willkommen auf der Startseite!</h1>
+  <div class="row">
+    <form class="col s12" action="#" th:action="@{/send}" th:object="${chatForm}" method="post">
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="prompt" class="materialize-textarea" th:field="*{prompt}" placeholder="Geben Sie Ihren Text ein"></textarea>
+          <label for="prompt">Eingabe</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 center-align">
+          <button class="btn waves-effect waves-light" type="submit">Senden</button>
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="row">
+    <div class="col s12">
+      <h2>Antwort:</h2>
+      <p th:text="${response}"></p>
+    </div>
+  </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
