--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Ärztlicher Dienst</title>
+  <title>Ärztlicher Assistent</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <script>
     let collectedICDCodes = [];
@@ -23,6 +23,9 @@
 
     function sendICDCodes() {
       const prompt = collectedICDCodes.join(", ");
+      const loadingMessage = document.getElementById("loadingMessage");
+      loadingMessage.style.display = "block"; // Show loading message
+
       fetch('/sendICDCodes', {
         method: 'POST',
         headers: {
@@ -35,6 +38,7 @@
                 const responseTextarea = document.getElementById("responseTextarea");
                 responseTextarea.value = data;
                 adjustTextareaHeight(responseTextarea);
+                loadingMessage.style.display = "none"; // Hide loading message
               });
     }
 
@@ -71,8 +75,11 @@
     <button id="sendButton" class="btn waves-effect waves-light" style="background-color: #1535a1;margin-top:1em;">Speichern</button>
   </div>
   <div class="row">
-    <h3 class="left">Wertende Ärztliche Stellungnahme</h3>
+    <div>
+      <h3 class="left">Wertende Ärztliche Stellungnahme</h3>
+    </div>
     <textarea id="responseTextarea" class="materialize-textarea"></textarea>
+    <div id="loadingMessage" style="display:none; color: red; margin-top: 1em;">Die Stellungnahme wird generiert...</div>
   </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
