refactoring and new domain anmanese added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,6 +66,9 @@
   </script>
 </head>
 <body>
+<div class="row">
+  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Zur Anamnese</a>
+</div>
 <div class="container">
   <h3 class="left">Diagnose nach ICD</h3>
   <div class="row">
