implement anamnese analyse via regex

--- a/src/main/resources/templates/anamnese-regex.html
+++ b/src/main/resources/templates/anamnese-regex.html
@@ -1,7 +1,8 @@
+<!-- src/main/resources/templates/anamnese.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Anamnese</title>
+    <title>Anamnese via Regex</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
 </head>
 <body>
@@ -9,9 +10,10 @@
     <a href="/" class="btn waves-effect waves-light" style="background-color: #1535a1;">Ärztliche Stellungnahme</a>
 </div>
 <div class="container">
-    <h3 class="left">Anamnese</h3>
-    <form method="POST" enctype="multipart/form-data" action="/anamnese/upload">
+    <h3 class="left">Anamnese via Regex</h3>
+    <form method="POST" enctype="multipart/form-data" action="/anamnese-regex/upload">
         <div class="input-field">
+            <label for="file">PDF-Datei hochladen</label>
             <input type="file" id="file" name="file" accept="application/pdf" required>
         </div>
         <div class="input-field">
@@ -25,6 +27,7 @@
         <h5>Analyse Ergebnis:</h5>
         <p th:text="${analysisResult}">Das Ergebnis der Analyse wird hier angezeigt.</p>
     </div>
+
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
