--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,9 @@
 </head>
 <body>
 <div class="row">
-  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Zur Anamnese</a>
+  <a href="/" class="btn waves-effect waves-light" style="background-color: #1535a1;">Ärztliche Stellungnahme</a>
+  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via AI</a>
+  <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via Regex</a>
 </div>
 <div class="container">
   <h3 class="left">Diagnose nach ICD</h3>
