Trainingsdaten fuer Stellungnahme mit einbeziehen

--- a/src/main/resources/templates/anamnese.html
+++ b/src/main/resources/templates/anamnese.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="row">
-    <a href="/" class="btn waves-effect waves-light" style="background-color: #1535a1;">Ärztliche Stellungnahme</a>
+    <a href="/" class="btn waves-effect waves-light" style="background-color: #ccc;">Ärztliche Stellungnahme</a>
     <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via AI</a>
-    <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via Regex</a>
+    <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
 </div>
 <div class="container">
     <h3 class="left">Anamnese</h3>
