--- a/src/main/resources/templates/anamneseauswertung-regex.html
+++ b/src/main/resources/templates/anamneseauswertung-regex.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <div class="row">
-  <a href="/" class="btn waves-effect waves-light" style="background-color: #1535a1;">Ärztliche Stellungnahme</a>
-  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via AI</a>
+  <a href="/" class="btn waves-effect waves-light" style="background-color: #ccc;">Ärztliche Stellungnahme</a>
+  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via AI</a>
   <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via Regex</a>
 </div>
 <div class="container">
