--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,8 +68,8 @@
 <body>
 <div class="row">
   <a href="/" class="btn waves-effect waves-light" style="background-color: #1535a1;">Ärztliche Stellungnahme</a>
-  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via AI</a>
-  <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via Regex</a>
+  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via AI</a>
+  <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
 </div>
 <div class="container">
   <h3 class="left">Diagnose nach ICD</h3>
