--- a/src/main/resources/templates/transcriptor.html
+++ b/src/main/resources/templates/transcriptor.html
@@ -8,6 +8,13 @@
 <div class="container">
   <h3>Transcriptor Page</h3>
   <p>This is the Transcriptor page.</p>
+  <form method="POST" enctype="multipart/form-data" action="/transcriptor/upload">
+    <div class="input-field">
+      <label for="videoFile">Select video file:</label>
+      <input type="file" id="videoFile" name="videoFile" accept="video/*" required>
+    </div>
+    <button type="submit" class="btn waves-effect waves-light" style="background-color: #1535a1;">Upload</button>
+  </form>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
