--- a/src/main/resources/templates/anamnese-regex.html
+++ b/src/main/resources/templates/anamnese-regex.html
@@ -10,6 +10,7 @@
     <a href="/" class="btn waves-effect waves-light" style="background-color: #ccc;">Ärztliche Stellungnahme</a>
     <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via AI</a>
     <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via Regex</a>
+    <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcriptor</a>
 </div>
 <div class="container">
     <h3 class="left">Anamnese via Regex</h3>
