--- a/src/main/resources/templates/transcriptor.html
+++ b/src/main/resources/templates/transcriptor.html
@@ -5,6 +5,12 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
 </head>
 <body>
+<div class="row">
+  <a href="/" class="btn waves-effect waves-light" style="background-color: #ccc;">Ärztliche Stellungnahme</a>
+  <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via AI</a>
+  <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
+  <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #1535a1;">Transcriptor</a>
+</div>
 <div class="container">
   <h3>Transcriptor Page</h3>
   <p>This is the Transcriptor page.</p>
