--- a/src/main/resources/templates/transcriptor.html
+++ b/src/main/resources/templates/transcriptor.html
@@ -17,7 +17,7 @@
   <form method="POST" enctype="multipart/form-data" action="/transcriptor/upload">
     <div class="input-field">
       <label for="videoFile">Select video file:</label>
-      <input type="file" id="videoFile" name="videoFile" accept="video/*" required>
+      <input type="file" id="videoFile" name="videoFile" accept="video/*,audio/*" required>
     </div>
     <button type="submit" class="btn waves-effect waves-light" style="background-color: #1535a1;">Upload</button>
   </form>
