--- a/src/main/resources/templates/anamnese.html
+++ b/src/main/resources/templates/anamnese.html
@@ -11,6 +11,8 @@
     <a href="/anamnese-ocr" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via OCR</a>
     <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
     <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcriptor</a>
+    <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Zusammenfassung</a>
+
 </div>
 <div class="container">
     <h3 class="left">Anamnese</h3>
