switch local and remote api

--- a/src/main/resources/templates/zusammenfassung.html
+++ b/src/main/resources/templates/zusammenfassung.html
@@ -29,6 +29,18 @@
         <input id="keyword" name="keyword" type="text" class="validate">
         <label for="keyword">Keyword</label>
       </div>
+      <p>
+        <label>
+          <input name="source" type="radio" value="remote" checked />
+          <span>Remote</span>
+        </label>
+      </p>
+      <p>
+        <label>
+          <input name="source" type="radio" value="local" />
+          <span>Lokal</span>
+        </label>
+      </p>
       <button type="submit" class="btn waves-effect waves-light" style="background-color: #1535a1;">Search</button>
     </form>
   </div>
