OpenAi and WatsonX Tests

--- a/src/main/resources/templates/anamnese-ocr.html
+++ b/src/main/resources/templates/anamnese-ocr.html
@@ -27,6 +27,9 @@
     <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
     <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcriptor</a>
     <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Zusammenfassung</a>
+    <a href="/openai" class="btn waves-effect waves-light" style="background-color: #ccc;">OpenAi</a>
+    <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>
+
 
 </div>
 <div class="container">
