--- a/src/main/resources/templates/transcriptor.html
+++ b/src/main/resources/templates/transcriptor.html
@@ -12,6 +12,9 @@
   <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
   <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #1535a1;">Transcriptor</a>
   <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Zusammenfassung</a>
+  <a href="/openai" class="btn waves-effect waves-light" style="background-color: #ccc;">OpenAi</a>
+  <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>
+
 
 </div>
 <div class="container">
