--- a/src/main/resources/templates/zusammenfassung.html
+++ b/src/main/resources/templates/zusammenfassung.html
@@ -12,6 +12,9 @@
   <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
   <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcriptor</a>
   <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #1535a1;">Zusammenfassung</a>
+  <a href="/openai" class="btn waves-effect waves-light" style="background-color: #ccc;">OpenAi</a>
+  <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>
+
 </div>
 <div class="container">
   <h3 class="left">Zusammenfassung Anamnese</h3>
