--- a/src/main/resources/templates/openai.html
+++ b/src/main/resources/templates/openai.html
@@ -15,6 +15,7 @@
   <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Zusammenfassung</a>
   <a href="/openai" class="btn waves-effect waves-light" style="background-color: #1535a1;">OpenAi</a>
   <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>
+  <a href="/pdf-zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">PDF-Zusammenfassung</a>
 
 
 </div>
