--- a/src/main/resources/templates/anamnese.html
+++ b/src/main/resources/templates/anamnese.html
@@ -7,13 +7,13 @@
 <body>
 <div class="row">
     <a href="/" class="btn waves-effect waves-light" style="background-color: #ccc;">Ärztliche Stellungnahme</a>
-    <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via AI</a>
-    <a href="/anamnese-ocr" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via OCR</a>
-    <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>
-    <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcriptor</a>
-    <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Zusammenfassung</a>
-    <a href="/openai" class="btn waves-effect waves-light" style="background-color: #ccc;">OpenAi</a>
-    <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>
+<!--    <a href="/anamnese" class="btn waves-effect waves-light" style="background-color: #1535a1;">Anamnese via AI</a>-->
+<!--    <a href="/anamnese-ocr" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via OCR</a>-->
+<!--    <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>-->
+    <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcript</a>
+    <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Extrahierte Informationen aus Anamnese-Gespräch</a>
+<!--    <a href="/openai" class="btn waves-effect waves-light" style="background-color: #ccc;">OpenAi</a>-->
+<!--    <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>-->
 
 </div>
 <div class="container">
