--- a/src/main/resources/templates/keywordinfo.html
+++ b/src/main/resources/templates/keywordinfo.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>PDF Zusammenfassung</title>
+  <title>Anamnese</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
   <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -34,35 +33,47 @@
 <!--  <a href="/anamnese-ocr" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via OCR</a>-->
 <!--  <a href="/anamnese-regex" class="btn waves-effect waves-light" style="background-color: #ccc;">Anamnese via Regex</a>-->
   <a href="/transcriptor" class="btn waves-effect waves-light" style="background-color: #ccc;">Transcript</a>
-  <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Extrahierte Informationen aus Anamnese-Gespräch</a>
+  <a href="/zusammenfassung" class="btn waves-effect waves-light" style="background-color: #1535a1;">Extrahierte Informationen aus Anamnese-Gespräch</a>
 <!--  <a href="/openai" class="btn waves-effect waves-light" style="background-color: #ccc;">OpenAi</a>-->
 <!--  <a href="/watsonx" class="btn waves-effect waves-light" style="background-color: #ccc;">WatsonX</a>-->
-  <a href="/pdf-zusammenfassung" class="btn waves-effect waves-light" style="background-color: #1535a1;">Extrahierte Informationen aus Anamnese-Bogen</a>
+  <a href="/pdf-zusammenfassung" class="btn waves-effect waves-light" style="background-color: #ccc;">Extrahierte Informationen aus Anamnese-Bogen</a>
 
 </div>
 <div class="container">
-  <h3 class="left">Extrahierte Informationen aus Anamnese-Bogen</h3>
+  <div class="row">
+  <h3 class="left">Extrahierte Informationen aus Anamnese-Gespräch</h3>
+  </div>
+  <div class="row">
+    <form action="/zusammenfassung/search" method="post">
+      <div class="input-field col s6">
+        <input id="keyword" name="keyword" type="text" class="validate">
+        <label for="keyword">Keyword</label>
+      </div>
+      <p>
+        <label>
+          <input name="source" type="radio" value="remote" checked />
+          <span>Remote</span>
+        </label>
+      </p>
+      <p>
+        <label>
+          <input name="source" type="radio" value="local" />
+          <span>Lokal</span>
+        </label>
+      </p>
+      <button type="submit" class="btn waves-effect waves-light" style="background-color: #1535a1;">Search</button>
+    </form>
+  </div>
 
-  <form method="POST" enctype="multipart/form-data" action="/pdf/upload">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-    <div class="input-field">
-      <input type="file" id="file" name="file" accept="application/pdf" required>
-
-      <label for="searchTerm">Stichwort</label>
-      <input type="text" id="searchTerm" name="searchTerm" placeholder="Suchbegriff eingeben" required>
+  <div class="row">
+    <div th:if="${response}">
+      <p th:utext="${response}"></p>
     </div>
-    <button type="submit" class="btn waves-effect waves-light" style="background-color: #1535a1;">Informationen zu Suchbegriff extrahieren</button>
-    <div class="row" th:if="${response}">
-      <p>Extrahierte Informationen zu:
-      <span style="font-weight: bold" th:text="${searchTerm}"></span> </p>
-      <p th:text="${response}">Das Ergebnis der Analyse wird hier angezeigt.</p>
-    </div>
-  </form>
-<div id="loadingMessage" style="color: red; margin-top: 1em; display: none;">Informationen werden extrahiert...</div>
+  </div>
+  <div id="loadingMessage" style="color: red; margin-top: 1em; display: none;">Informationen werden generiert...</div>  </div>
 </div>
-
-</div>
-
 
 </body>
 </html>
